# Evolve

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  100_PERCENT_COMPLETE_FINAL.md  100_PERCENT_COMPLETION_SUMMARY.md  2.25.0  ADMIN_FIXES.md  ADMIN_FIXES_2.md  ADMIN_FIXES_3.md  ADMIN_FIXES_4.md  ADVANCED_FEATURES_README.md  AGENT_IMPORT_FIXES.md  AGENT_LOCATIONS_AND_TASKTYPE_FIX.md  AGENT_REGISTRY_FIXES.md  AGENT_WIRING.md  API_KEYS_ADMIN.md  API_KEY_VERIFICATION_REPORT.md  APP_CONSOLIDATION.md  AUDIT_REPORT.txt  AUTONOMOUS_FIXES.md  BARE_EXCEPT_REFACTORING_COMPLETE.md  BLANK_PAGE_FIX.md  C06_SEARCH_REPORT.md  CAPABILITY_GAPS.md  CHANGELOG.md  CHECKLIST_COMPLETION_REPORT.md  CLEANUP_LOG.md  CLEANUP_SUMMARY.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  CRITICAL_MODULES_IMPROVEMENTS.md  DASHBOARD_FIXES.md  DEAD_CODE_REVIEW.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_READY.md  (+261 more)
.streamlit/: config.toml
MASTER_ANALYSIS_20251231_131605/: 00_MASTER_SUMMARY.txt
agents/: __init__.py  agent_config.py  agent_controller.py  hybrid_prompt_memory.py  meta_agent.py  mock_agent.py  model_discovery_agent.py  model_generator.py  model_generator_agent.py  model_innovation_agent.py  orchestrator.py  prompt_agent.py  prompt_examples.json  prompt_router.py  prompt_router_refactored.py  registry.py  strategy_research_agent.py  strategy_switcher.py  task_agent.py  task_router.py
alerts/: README.md  alert_manager.py  test_alert_manager.py
automate/: daily_scheduler.py
automation/: automation_plan.md  pending_tasks.md  requirements-dev.txt  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
causal/: __init__.py  causal_model.py  driver_analysis.py
components/: __init__.py  multi_timeframe_chart.py  news_candle_chart.py  onboarding.py  watchlist_widget.py
config/: CONFIG_README.md  __init__.py  app_config.py  app_config.yaml  backtest.yaml  config.json  config.py  config_loader.py  forecasting.yaml  llm_config.py  log_config.yaml  logging_config.py  logging_config.yaml  market_analysis_config.py  market_analysis_config.yaml  model_registry.yaml  optimizer_config.yaml  primary_config.py  pytest.ini  settings.json  settings.py  strategies.yaml  strategy_registry.json  system_config.yaml  task_schedule.yaml  trigger_thresholds.json  user_roles.yaml  user_store.py  xgboost_config.yaml
core/: README.md  __init__.py  agent_hub.py  capability_router.py  container.py  error_handler.py  events.py  logging.py  plugins.py  sanity_checks.py  session_utils.py
dashboard/: App.js  index.js  package.json
data/: README.md  __init__.py  agent_registry.json  live_data_feed.py  live_feed.py  streaming_pipeline.py
deploy/: Dockerfile  deploy.sh  deployment_config.yaml  docker-compose.production.yml
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.production  Dockerfile.web  README.md
docs/: ADVANCED_FEATURES_README.md  ARCHITECTURE.md  ASYNC_STRATEGY_RUNNER.md  COMPREHENSIVE_UPGRADE_SUMMARY.md  ENHANCED_ARIMA.md  ENHANCED_COST_MODELING_README.md  ENSEMBLE_STRATEGY.md  EXECUTION_AGENT_SUMMARY.md  EXECUTION_AND_BACKTEST_FLOW.md  EXECUTION_ENGINE.md  FORECAST_DISPATCHER_AND_STRATEGY_MERGE_ENHANCEMENTS.md  MODEL_CACHING.md  MODEL_INNOVATION_AGENT.md  MODEL_PERFORMANCE_LOGGING_README.md  MODULARIZATION_GUIDE.md  MONTE_CARLO_SIMULATION_README.md  OPTUNA_TUNER_README.md  ORCHESTRATOR_INTEGRATION.md  PORTFOLIO_MANAGEMENT.md  PROJECT_SHOWCASE.md  PROMPT_EXAMPLES.md  README_UNIFIED_INTERFACE.md  REFACTORED_PROMPT_ROUTER.md  RESUME_SUMMARY.md  RISK_AWARE_HYBRID_MODEL_README.md  SAFE_JSON_SAVING.md  SIGNAL_COLLECTOR_AND_KUBE_DEPLOY_ENHANCEMENTS.md  STRATEGY_COMBO_README.md  STRATEGY_RESEARCH_AGENT.md  TASK_AGENT_README.md  TASK_ORCHESTRATOR.md  UNIFIED_INTERFACE_SUMMARY.md  __init__.py  audit_admin.md  audit_forecasting.md  audit_performance.md  audit_portfolio.md  audit_risk.md  audit_strategy.md  audit_trade.md  (+6 more)
evaluation/: README.md  __init__.py
examples/: README.md  demo_async_strategies.py  enhanced_arima_example.py  enhanced_cost_backtest_example.py  ensemble_strategy_example.py  example_async_strategy_runner.py  execution_engine_example.py  explainability_example.py  forecasting_example.py  market_analysis_example.py  meta_controller_example.py  model_innovation_example.py  model_performance_logging_example.py  monte_carlo_simulation_example.py  optuna_tuner_example.py  portfolio_management_example.py  prompt_examples_demo.py  prompt_router_example.py  risk_aware_hybrid_model_example.py  safe_json_saving_example.py  sentiment_analysis_example.py  strategy_combo_example.py  strategy_research_example.py  task_agent_example.py  task_orchestrator_example.py  walk_forward_backtest_example.py
execution/: README.md  __init__.py  advanced_order_executor.py  broker_adapter.py  execution_agent.py  live_trading_interface.py  models.py  redundant_broker_manager.py  trade_executor.py
fallback/: __init__.py  agent_hub.py  data_feed.py  fallback_llm.py  fallback_model.py  fallback_strategy.py  hybrid_engine.py  market_regime_agent.py  model_monitor.py  portfolio_manager.py  prompt_router.py  quant_gpt.py  report_exporter.py  strategy_logger.py  strategy_selector.py
features/: sentiment_features.py
git_review_reports/: 1_git_status.txt  2_modified_files.txt  3_untracked_files.txt  4_change_statistics.txt  5_complete_diff.txt  6_untracked_contents.txt  7_commit_history.txt  8_summary.txt
interface/: __init__.py  unified_interface.py
kubernetes/: deployment.yaml
legacy/: fix_performance_logger.py  fix_syntax_errors.py
legacy_tests/: final_integration_test.py
llm/: __init__.py  llm_summary.py
logs/: agent_thoughts.json  errors_20250603.json  execution_failures.json  optimization_history.json  optimizer_history.json  prompt_trace_logger.py
market_analysis/: __init__.py
memory/: __init__.py  logger_utils.py  model_log.py  model_monitor.py  performance_log.py  performance_logger.py  performance_weights.py  prompt_history.json  prompt_log.py  strategy_logger.py  test_prompt_history.json
meta/: meta_controller.py
(+1617 files in other folders)
